--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK1jOAm3ar7Q9Z2atGlenlrySqwq5LybI"></script>
   </head>
   <body>
     <app-root></app-root>
